@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-30-2006 patrick     Register signal handlers for SIGINT, SIGTERM, and (on
+                        Windows only) SIGBREAK when the kernel is started.
+                        NEW VERSION: 2.1.14
 Oct-01-2006 patrick     Updated for VPR 1.1.35.
                         NEW VERSION: 2.1.13
 Oct-01-2006 patrick     Updated to handle the vpr::Thread constructor throwing
